--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "framer-motion": "^12.23.16",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
   "devDependencies": {
